# pv-battery-econ

./: .gitignore  README.md  pyproject.toml
configs/: example_site.yaml  site_timeseries.yaml
src/pv_battery_econ/: config.py  timeseries.py
src/pv_battery_econ/cli/: main.py  run_ts.py
src/pv_battery_econ/economics/: cashflow.py  dispatch.py
src/pv_battery_econ/reporting/: html_report.py
